fix AbstractComponentTest signature change (#304)
* fix AbstractComponentTest signature change

* remove maven-surefire-plugin build block